--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,24 +1,31 @@
+@import url('https://fonts.googleapis.com/css?family=Acme|Francois+One|Luckiest+Guy|Sigmar+One&display=swap');
+
+
 body {
-  margin: 0;
+  margin: auto;
   padding: 0;
   font-family: sans-serif;
-  background-color: #f2f2f2;
+  background-color: black;
+  max-width: 100%;
 }
 
 .movie-card {
   background-color: #fff;
-  border: 0;
+  border: 4px solid green;
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
   padding: 1rem;
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
+  width: 100%;
+
 }
 
 .movie-director {
   padding: 4px 0;
-  font-size: 0.8rem;
+  font-size: 1rem;
+  font-family: 'Acme', sans-serif;
 }
 
 .saved-list {
@@ -27,33 +34,45 @@ body {
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
   padding: 1rem;
-  cursor: pointer;
+  /* cursor: pointer; */
   position: relative;
   margin: 1rem auto;
-  width: 75%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: darkslategrey;
 }
 
 .saved-list h3 {
   margin-right: 10px;
+  font-family: 'Sigmar One', cursive;
+  color: greenyellow;
+  font-size: 1.5rem;
+
 }
 
 .saved-movie {
   margin: 0 10px;
+  background-color: black;
+  padding: 10px;
+  display: flex;
 }
+
 .saved-active {
   color: blue;
   border: 1px solid grey;
   padding: 5px;
 }
+
 .save-wrapper {
   position: relative;
-  width: 75%;
+  width: 100%;
   margin: 1rem auto;
 }
+
 .save-button {
+  border: 5px solid green;
   position: absolute;
   top: 25px;
   right: 25px;
@@ -61,12 +80,40 @@ body {
   padding: 5px 10px;
   background-color: lightseagreen;
 }
+
 .save-button:hover {
+  border: 5px solid orange;
   background-color: green;
   color: white;
 }
 
 .home-button {
+  border: 5px solid yellow;
   padding: 5px 10px;
   background-color: lightskyblue;
+}
+
+a {
+  text-decoration: none;
+  color: deeppink;
+  font-size: 1.2rem;
+  font-family: 'Acme', sans-serif;
+}
+
+.filmTitle {
+  background-color: black;
+  color: Red;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.container {
+  width: 60%;
+  margin: auto;
+}
+
+.head {
+  width: 100%;
+  font-family: 'Luckiest Guy', cursive;
+  color: silver
 }
